# lie_detection_binary

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
docs/: GATEWAY.md  NEXT_STEPS.md
fatigue/: RESULTS.md  config.py  ear.py  extract.py  manifest.py  requirements-ear.txt  train.py  visual.py
lie_detector/: __init__.py  config.py  dataset.py  io_utils.py  media.py
lie_detector/extraction/: __init__.py  audio_prosody.py  gateway.py  gemini.py  gemini_reason.py
lie_detector/features/: __init__.py  assemble.py  audio_features.py  text_features.py  visual_features.py
lie_detector/modeling/: __init__.py  metrics.py  train.py
paper/: deception_detection.md  deception_detection.tex  reference_perez_rosas_2015.md
scripts/: 01_build_manifest.py  02_extract_av.py  03_extract_audio.py  04_build_features.py  05_train.py  06_paper_comparison.py  07_extract_gemini.py  08_gemini_reason.py  09_best_fusion.py  10_improve_selfhosted.py  11_demographics_audit.py  12_cost_analysis.py  13_feature_ablation.py  14_consolidate.py  15_intent_analysis.py  16_predict.py  17_paper_figures.py  18_gen_intro_figure.py  20_deep_analysis.py  run_all.py
tests/: test_ear.py  test_smoke.py
